Fixed Image Description overflow

--- a/RWDP/main.css
+++ b/RWDP/main.css
@@ -133,7 +133,7 @@ ul {
 .top-news {
   float: right;
   width: 100%;
-  height: 300px;
+  height: 350px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
 }
@@ -340,10 +340,8 @@ footer a {
   width: 48px;
 }
 
-li.nav__item{
-  width:25%;
-}
-
-#navbar{
-  width: 95%;
+@media screen and (max-width: 610px){
+    article.description{
+    display:none;
+  }
 }
