--- a/RWDP/main_320.css
+++ b/RWDP/main_320.css
@@ -38,3 +38,7 @@
 footer{
 	width : 100%;
 }
+
+article.description{
+	display:none;
+}
